Refactore code structure and add pagination